--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# ===========================
+# 🔁 Python / FastAPI Backend
+# ===========================
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -36,17 +40,38 @@ pytest_cache/
 # Uvicorn reload files
 *.pid
 
-# Pydantic compiled schema cache (optional)
+# Pydantic compiled schema cache
 __pydantic_cache__/
 
 # Streamlit config
 .streamlit/
 
-# Node or frontend tools (if ever added)
-node_modules/
-build/
-dist/
-*.tgz
+# ===========================
+# 🧩 Frontend (Vite + React + JS)
+# ===========================
 
-# Compiled JS/CSS (in case you ever use Tailwind or similar)
-*.map
+# Frontend build output
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
