--- a/requirements.txt
+++ b/requirements.txt
@@ -13,8 +13,8 @@ celery==5.3.4
 redis==5.0.1
 emails==0.6.0
 jinja2==3.1.2
-pytest==7.4.3
-pytest-asyncio==0.21.1
 httpx==0.25.2
 dnspython==2.4.2
-pydantic[email]==2.5.0
+email-validator==2.1.0.post1
+pytest==7.4.3
+pytest-asyncio==0.21.1
