--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ python-multipart==0.0.6
 pydantic==2.5.0
 pydantic-settings==2.1.0
 python-dotenv==1.0.0
-google-generativeai==0.3.2
+google-generativeai>=0.8.3
 celery==5.3.4
 redis==5.0.1
 emails==0.6.0
